first try search bar and buttons

--- a/homepage.html
+++ b/homepage.html
@@ -19,9 +19,12 @@
             <a href = "">Images</a>
         </li>
 </nav>
-
-<img src= "googlelogo.png" alt= "GOOGLE LOGO" id= "logo">
-
+<main>
+    <img src= "googlelogo.png" alt= "GOOGLE LOGO" id= "logo">
+    <input type= "text" id= "searchbar">
+    <input type= "button" id= "search" value= "Google Search">
+    <input type= "button" id= "lucky" value= "I'm Feeling Lucky">
+</main>
 
 
 
