added footer list

--- a/homepage.html
+++ b/homepage.html
@@ -22,9 +22,33 @@
 <main>
     <img src= "googlelogo.png" alt= "GOOGLE LOGO" id= "logo">
     <input type= "text" id= "searchbar">
-    <input type= "button" id= "search" value= "Google Search">
-    <input type= "button" id= "lucky" value= "I'm Feeling Lucky">
+    <div class= "buttons">
+        <input type= "button" id= "search" value= "Google Search">
+        <input type= "button" id= "lucky" value= "I'm Feeling Lucky">
+    </div>
 </main>
+
+<footer>
+    <ul id= "footer-list">
+        <li>
+            <a href= "">Advertising</a>
+        </li>
+        <li>
+            <a href= "">Business</a>
+        </li>
+        <li>
+            <a href= "">How Search works</a>
+        </li>
+        <li>
+            <a href= "">Privacy</a>
+        </li>
+        <li>
+            <a href= "">Terms</a>
+        </li>
+        <li>
+            <a href= "">Settings</a>
+        </li>
+</footer>
 
 
 
